fix: z-index transform glitch?

--- a/app/app.css
+++ b/app/app.css
@@ -911,13 +911,13 @@ label {
 .producer-id {
 	animation: cubic-bezier(0.22, 1, 0.36, 1) slideIn 1000ms 1000ms backwards;
 	perspective: 4000px;
-	z-index: 0;
 }
 
 .producer-id-inner {
 	transition: 500ms;
 	transform-style: preserve-3d;
 	animation: cubic-bezier(0.22, 1, 0.36, 1) rotateIn 1000ms 2000ms backwards;
+	z-index: 1;
 }
 
 .card-front,
